--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "history": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
+    "react-player": "^2.9.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
     "typescript": "^4.1.2",
-    "autoprefixer": "^9.8.6"
+    "web-vitals": "^1.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.4",
@@ -37,7 +38,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.0",
     "postcss": "^7.0.36",
-    "prettier": "^2.1.2"    
+    "prettier": "^2.1.2"
   },
   "scripts": {
     "start": "craco start",
