--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.6",
     "history": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flatpickr": "^3.10.7",
     "react-fontawesome": "^1.7.1",
+    "react-hook-form": "^7.11.1",
     "react-player": "^2.9.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toast-notifications": "^2.5.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
